--- a/excursionapp/templates/create_excursion.html
+++ b/excursionapp/templates/create_excursion.html
@@ -110,27 +110,27 @@
                     <p class="services-help-text">Отметьте услуги, которые включены в стоимость экскурсии</p>
                     
                     <div class="checkbox-group">
-                        <div class="checkbox-item">
+                        <div class="checkbox-item" style="width: 50%;">
                             <input type="checkbox" name="guide_services" id="id_guide_services" class="form-checkbox">
                             <label for="id_guide_services" class="checkbox-label">Услуги гида/водителя</label>
                         </div>
                         
-                        <div class="checkbox-item">
+                        <div class="checkbox-item" style="width: 50%;">
                             <input type="checkbox" name="transfer_service" id="id_transfer_service" class="form-checkbox">
                             <label for="id_transfer_service" class="checkbox-label">Трансфер на протяжении всего пути</label>
                         </div>
                         
-                        <div class="checkbox-item">
+                        <div class="checkbox-item" style="width: 50%;">
                             <input type="checkbox" name="group_first_aid" id="id_group_first_aid" class="form-checkbox">
                             <label for="id_group_first_aid" class="checkbox-label">Групповая аптечка</label>
                         </div>
                         
-                        <div class="checkbox-item">
+                        <div class="checkbox-item" style="width: 50%;">
                             <input type="checkbox" name="included_lunch" id="id_included_lunch" class="form-checkbox">
                             <label for="id_included_lunch" class="checkbox-label">Включенный обед</label>
                         </div>
                         
-                        <div class="checkbox-item">
+                        <div class="checkbox-item" style="width: 50%;">
                             <input type="checkbox" name="food_included" id="id_food_included" class="form-checkbox">
                             <label for="id_food_included" class="checkbox-label">Питание</label>
                         </div>
