--- a/excursionapp/templates/payment.html
+++ b/excursionapp/templates/payment.html
@@ -110,7 +110,7 @@
     </div>
 </div>
 
-<script src="{% static 'js/excursion_detail.js' %}"></script>
+<script src="{% static 'js/payment.js' %}"></script>
 
 </body>
 </html>
