--- a/excursionapp/templates/update_excursion.html
+++ b/excursionapp/templates/update_excursion.html
@@ -52,6 +52,18 @@
                 {{ form.location|add_class:"form-input" }}
             </div>
             
+            <div class="form-group">
+                <label for="{{ form.meeting_address.id_for_label }}" class="form-label">Адрес места встречи</label>
+                {{ form.meeting_address|add_class:"form-input" }}
+                <div class="form-help-text">Укажите точный адрес места встречи для отображения на Google карте (например: "ул. Достык 5, Алматы")</div>
+            </div>
+            
+            <div class="form-group">
+                <label for="{{ form.end_location.id_for_label }}" class="form-label">Место окончания экскурсии</label>
+                {{ form.end_location|add_class:"form-input" }}
+                <div class="form-help-text">Укажите место, где закончится экскурсия (если отличается от места встречи)</div>
+            </div>
+            
             <div class="time-inputs">
                 <div class="form-group">
                     <label for="{{ form.start_time.id_for_label }}" class="form-label">Время начала</label>
