Маленькое изменение с Vectorpng

--- a/excursionapp/templates/tour_agent_excursions.html
+++ b/excursionapp/templates/tour_agent_excursions.html
@@ -19,7 +19,7 @@
         <div class="excursion-cards-container">
             {% for location, excursions in grouped_excursions.items %}
                 <h3>
-                    <img src="{% static 'images/vector.png' %}" alt="Vector" class="vector-icon">
+                    <img src="{% static 'images/Vector.png' %}" alt="Vector" class="vector-icon">
                     {{ location }}
                 </h3>
                 <div class="excursion-cards">
