Календарь на русском

--- a/excursionapp/templates/excursion_detail.html
+++ b/excursionapp/templates/excursion_detail.html
@@ -9,6 +9,8 @@
     <link rel="stylesheet" href="{% static 'css/notifications.css' %}" />
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/flatpickr/dist/flatpickr.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" />
+    <script src="https://cdn.jsdelivr.net/npm/flatpickr"></script>
+    <script src="https://npmcdn.com/flatpickr/dist/l10n/ru.js"></script>
 </head>
 <body>
     <!-- Контейнер для toast-уведомлений -->
@@ -253,6 +255,7 @@
     {% include 'modal.html' %}
     {% include 'feedback.html' %}
     <script src="https://cdn.jsdelivr.net/npm/flatpickr"></script>
+    <script src="https://cdn.jsdelivr.net/npm/flatpickr/dist/l10n/ru.js"></script>
     <script src="{% static 'js/excursion_detail.js' %}"></script>
     
     <!-- Скрытое поле с доступными датами -->
