--- a/excursionapp/templates/excursion_detail.html
+++ b/excursionapp/templates/excursion_detail.html
@@ -4,6 +4,7 @@
 <head>
     <title>{{ excursion.title }}</title>
     <meta charset="utf-8" />
+    <link rel="stylesheet" href="{% static 'css/fonts.css' %}" />
     <link rel="stylesheet" href="{% static 'css/excursion_detail.css' %}" />
     <link rel="stylesheet" href="{% static 'css/modal.css' %}" />
     <link rel="stylesheet" href="{% static 'css/notifications.css' %}" />
