--- a/excursionapp/templates/feedback.html
+++ b/excursionapp/templates/feedback.html
@@ -6,6 +6,7 @@
     <meta charset="utf-8" />
     <link rel="stylesheet" href="{% static 'css/feedback.css' %}" />
     <link rel="stylesheet" href="{% static 'css/floating-button.css' %}" />
+    <link rel="stylesheet" href="{% static 'css/fonts.css' %}" />
     <link href="https://fonts.googleapis.com/css2?family=Abhaya+Libre:wght@400&display=swap" rel="stylesheet">
 </head>
 <body>
