--- a/excursionapp/templates/index.html
+++ b/excursionapp/templates/index.html
@@ -4,6 +4,7 @@
 <head>
     <title>KazTour</title>
     <meta charset="utf-8" />
+    <link rel="stylesheet" href="{% static 'css/fonts.css' %}" />
     <link rel="stylesheet" href="{% static 'css/home.css' %}" />
     <link href="https://fonts.googleapis.com/css2?family=Abhaya+Libre:wght@400&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="{% static 'css/notifications.css' %}" />
