--- a/excursionapp/templates/tour_agent_list.html
+++ b/excursionapp/templates/tour_agent_list.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="{% static 'css/tour_agent_list.css' %}" />
     <link rel="stylesheet" href="{% static 'css/notifications.css' %}" />
     <link rel="stylesheet" href="{% static 'css/modal.css' %}" />
+    <link rel="stylesheet" href="{% static 'css/fonts.css' %}" />
     <link href="https://fonts.googleapis.com/css2?family=Abhaya+Libre:wght@400;800&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" />
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
