--- a/excursionapp/templates/update_excursion.html
+++ b/excursionapp/templates/update_excursion.html
@@ -12,6 +12,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
     <script src="https://cdn.jsdelivr.net/npm/flatpickr"></script>
     <script src="https://npmcdn.com/flatpickr/dist/l10n/ru.js"></script>
+    <link rel="stylesheet" href="{% static 'css/fonts.css' %}" />
 </head>
 <body>
     {% include 'navbar.html' %}
