--- a/excursionapp/templates/create_excursion.html
+++ b/excursionapp/templates/create_excursion.html
@@ -5,6 +5,7 @@
     <title>Создание экскурсии</title>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="{% static 'css/fonts.css' %}" />
     <link rel="stylesheet" href="{% static 'css/create_excursion.css' %}" />
     <link rel="stylesheet" href="{% static 'css/notifications.css' %}" />
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/flatpickr/dist/flatpickr.min.css">
