--- a/excursionapp/templates/excursions.html
+++ b/excursionapp/templates/excursions.html
@@ -4,6 +4,7 @@
 <head>
     <title>Все Экскурсии</title>
     <meta charset="utf-8" />
+    <link rel="stylesheet" href="{% static 'css/fonts.css' %}" />
     <link rel="stylesheet" href="{% static 'css/excursions.css' %}" />
     <link rel="stylesheet" href="{% static 'css/modal.css' %}" />
     <link rel="stylesheet" href="{% static 'css/notifications.css' %}" />
