--- a/excursionapp/templates/modal.html
+++ b/excursionapp/templates/modal.html
@@ -6,6 +6,7 @@
     <link rel="stylesheet" href="{% static 'css/modal.css' %}" />
     <link rel="stylesheet" href="{% static 'css/notifications.css' %}" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" />
+    <link rel="stylesheet" href="{% static 'css/fonts.css' %}" />
     <title>Title</title>
 </head>
 <body>
