--- a/excursionapp/templates/profile.html
+++ b/excursionapp/templates/profile.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="{% static 'css/profile.css' %}" />
     <link rel="stylesheet" href="{% static 'css/notifications.css' %}" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" />
+    <link rel="stylesheet" href="{% static 'css/fonts.css' %}" />
 </head>
 <body>
     {% include 'navbar.html' %}
