--- a/excursionapp/templates/tour_agent_excursions.html
+++ b/excursionapp/templates/tour_agent_excursions.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="{% static 'css/tour_agent_excursions.css' %}" />
     <link rel="stylesheet" href="{% static 'css/notifications.css' %}" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
+    <link rel="stylesheet" href="{% static 'css/fonts.css' %}" />
 </head>
 <body>
     {% include 'navbar.html' %}
