Все работает стабильно

--- a/excursionapp/templates/create_excursion.html
+++ b/excursionapp/templates/create_excursion.html
@@ -183,6 +183,6 @@
 
     <script src="https://cdn.jsdelivr.net/npm/flatpickr"></script>
     <script src="{% static 'js/create_excursion.js' %}"></script>
-
+    {% include 'modal.html' %}
 </body>
 </html>
