--- a/excursionapp/templates/navbar.html
+++ b/excursionapp/templates/navbar.html
@@ -89,6 +89,9 @@
         </div>
     </div>
 
+    <script>
+        const createAgentUrl = "{% url 'create_tour_agent' %}";
+    </script>
     <script src="{% static 'js/tour_agent_list.js' %}"></script>
 </body>
 </html>
