--- a/excursionapp/templates/payment.html
+++ b/excursionapp/templates/payment.html
@@ -110,7 +110,10 @@
         </div>
     </div>
 </div>
-
+<script>
+            const checkCardUrl = "{% url 'check_card' %}";
+            const processPaymentUrl = "{% url 'process_payment' %}";
+</script>
 <script src="{% static 'js/payment.js' %}"></script>
 
 </body>
