--- a/excursionapp/templates/tour_agent_excursions.html
+++ b/excursionapp/templates/tour_agent_excursions.html
@@ -55,7 +55,10 @@
         </div>
     </div>
     
+    <script>
+        const deleteExcursionUrl = "{% url 'delete_excursion' 0 %}"; // 0 будет заменен на ID экскурсии в JavaScript
+    </script>
     <script src="{% static 'js/tour_agent_excursion.js' %}"></script>
-    <script src="{% static 'js/modal.js' %}"></script>
+    {% include 'modal.html' %}
 </body>
 </html>
