--- a/excursionapp/templates/tour_agent_list.html
+++ b/excursionapp/templates/tour_agent_list.html
@@ -81,8 +81,10 @@
             </div>
         </div>
     </div>
-
-    <script src="{% static 'js/modal.js' %}"></script>
+   <script>
+       const updateAgentUrl = "{% url 'update_agent' 0 %}"; // 0 будет заменен на ID агента в JavaScript
+   </script>
+    {% include 'modal.html' %}
     <script src="{% static 'js/tour_agent_list.js' %}"></script>
  
 </body>
